Copy all Static Resource from spring pet clinic. Closes #15